# CompilersPrinciple

./: CMakeLists.txt
src/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp
src/include/: lexer.h  parser.h  token.h
tests/: CMakeLists.txt  tester.cpp
tests/example/: test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp
